<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="service_description">PinkyPlayer</string>
    <string name="description">Intelligent music player</string>

    <string name="action_service_connected">ServiceConnected</string>
    <string name="action_new_song">Complete2</string>
    <string name="action_next">ActionNext2</string>
    <string name="action_previous">ActionPrevious2</string>
    <string name="action_play_pause">ActionPlayPause2</string>
    <string name="action_on_create_options_menu">OptionsMenuCreated2</string>
    <string name="action_loaded">Loaded2</string>

    <string name="permission_title">Permission Needed</string>
    <string name="permission_audio_needed">Permission is needed to scan for music</string>
    <string name="permission_audio_denied">Unable to scan for music unless permission is granted</string>
    <string name="go_to_settings">Go to settings</string>

    <string name="permission_notification_needed">Permission is needed to show PinkyPlayer notification for playback control</string>
    <string name="permission_notification_denied">Unable to show PinkyPlayer notification for playback control unless permission is granted</string>

    <string name="thumbnail_error">There was a problem getting a thumbnail</string>
    <string name="loading">Loading</string>
    <string name="loading1" tools:ignore="TypographyFractions">
        Please wait while scanning the system for audio files (1/3)
    </string>
    <string name="loading2">Please wait while adding new audio file meta data(2/3)</string>
    <string name="loading3">Please wait while removing missing audio files from the playlist (3/3)</string>

    <string name="start_time">00:00:00</string>
    <string name="reset_probabilities">Reset Probabilities</string>
    <string name="lower_probabilities">Lower Probabilities</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="song_removed">Song removed from playlist</string>
    <string name="undo">Undo</string>
    <string name="pick_folder">Pick a folder with: </string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="open_queue">Open Queue</string>

    <!--FAB text-->
    <string name="fab_save">Save</string>
    <string name="fab_done">Done</string>
    <string name="fab_new">New</string>
    <string name="fab_edit">Edit</string>

    <!--Toolbar titles-->
    <string name="app_name">PinkyPlayer</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="settings">Settings</string>
    <string name="folder_search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>

    <!--For FragmentEditPlaylist-->
    <string name="playlist_name">Playlist Name:</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="new_playlist">New Playlist</string>
    <string name="select_songs">Select Songs</string>
    <string name="not_enough_songs_for_playlist">Pick at least one song</string>
    <string name="no_name_playlist">Enter a name for the new playlist</string>
    <string name="duplicate_name_playlist">There is already a playlist with that name</string>

    <!--For FragmentSettings-->
    <string name="max_percent"><b>Min Number of Songs:</b></string>
    <string name="max_percent_desc">The min number of songs determines the amount of songs you will hear
        when the algorithm finds the songs you like. The lower this number, the less songs you will hear
        when the algorithm finds the songs you like. At one, your favorite song will play a lot after a while until
        you use the menu in the app bar to reset the probabilities.
    </string>
    <string name="max_percent_error">Enter a positive number for Min Number of Songs</string>
    <string name="percent_change_up"><b>Mod Up:</b></string>
    <string name="percent_change_down"><b>Mod Down:</b></string>
    <string name="percent_change_desc">The mods (1-100) determine how much weight the algorithm uses
        when the thumb up, thumb down, or skip button are tapped. 1 makes the smallest change and 100 makes the largest change.
        When min grain size is 1 and mod up is 100, a song will take the least number of taps to play more often.
        When mod down is 1, songs will take a lot of taps until you do not hear them as often.</string>
    <string name="percent_change_error">Mod must be between 1 and 100</string>
    <string name="hint_min_n_songs">Min number of songs</string>
    <string name="hint_percent_change_up">Mod up</string>
    <string name="hint_percent_change_down">Mod down</string>
    <string name="action_settings">Settings</string>

    <string name="RR">Ruh roh</string>
    <string name="song_art">Song Art</string>
    <string name="easter_egg">Easter Egg!</string>

</resources>