<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnPrimary"
    tools:context=".FragmentTitle">

    <Button
        android:id="@+id/button_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        app:layout_constraintBottom_toTopOf="@+id/button_songs"
        app:layout_constraintEnd_toEndOf="@+id/button_songs"
        app:layout_constraintStart_toStartOf="@+id/button_songs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintEnd_toEndOf="@+id/button_settings"
        app:layout_constraintStart_toStartOf="@+id/button_settings"
        app:layout_constraintTop_toBottomOf="@+id/button_playlists" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_songs" />

</androidx.constraintlayout.widget.ConstraintLayout>