<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOnPrimary"
        tools:context=".fragments.FragmentEditPlaylist">

        <Button
            android:id="@+id/buttonEditSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_songs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPlaylistName" />

        <EditText
            android:id="@+id/editTextPlaylistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_playlist"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPlaylistName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewPlaylistName"
            app:layout_constraintTop_toTopOf="@+id/textViewPlaylistName" />

        <TextView
            android:id="@+id/textViewPlaylistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/playlist_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEditSongs"
            app:layout_constraintEnd_toStartOf="@+id/editTextPlaylistName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>